# tauwa

./: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: display_graph.dart  ex_driver.dart  main.dart
example/lib/MozillaEx/audio_analyser/: MozillaEx_AudioAnalyser_graph.drawio  audio_analyser_ex.dart
example/lib/MozillaEx/audio_basics/: MozillaEx_AudioBasics_graph.drawio  audio_basics_ex.dart
example/lib/MozillaEx/audio_buffer/: MozillaEx_AudioBuffer_graph.drawio  audio_buffer_ex.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/web/: index.html
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: tauwa.podspec
lib/: tau_bindings_generated.dart  tauwa.dart
lib/public/: tauwa_class.dart  tauwa_event.dart  tauwa_interface.dart  tauwa_metaclass.dart
lib/public/rust/: frb_generated.dart  frb_generated.freezed.dart  frb_generated.io.dart  frb_generated.web.dart
lib/public/rust/api/: mimi.dart  (+6 more)
linux/: CMakeLists.txt
macos/: tauwa.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mimi.rs  mod.rs  simple.rs  toto.rs  webaudio.rs  zozo.rs
src/: CMakeLists.txt  tau.c  tau.h
test/: tauwa_test.dart
windows/: CMakeLists.txt
(+38 files in other folders)
