[package]
name = "tauwa"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.3.0"
#flutter_rust_bridge = { path = "../../flutter_rust_bridge/frb_rust" }
#web-audio-api = { version = "1.0.0-rc.6" , features = ["cpal"] }
#web-audio-api = "0.45.2"
#oboe = "0.6.1"
#oboe = { version = "0.6.1", features = ["java-interface", "shared-stdcxx"] }
#oboe = { version = "0.6.1", features = ["shared-stdcxx"] }
web-audio-api = { version = "1.0.0-rc.6" }
cpal = { version = "0.15.3" , features = ["oboe-shared-stdcxx"]}
#web-audio-api = { path = "../web-audio-api-rs" }
#cpal = "0.15.3"
env_logger = "0.11.3"
log = "0.4.21"
trace = "0.1.7"
#oslog = "0.2.0"
lazy_static = "1.4.0"
simple-log = "1.6.0"
parking_lot = "0.12.2"
sink = "0.1.0"
futures = "0.3.30"
flutter_logger = "0.6.1"
extend = "1.2.0"
anyhow = "1.0.86"
paste = "1.0.15"
delegate-attr = "0.3.0"
